See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.36.0

              libnetpbm: BK color matching adjustments, change of
              enum bk_color.  Thanks "Kenan Kalajdzic"
              <kalajdzic@gmail.com>.

              pbmtonokia: fix headers of NGG and NOL to include 3 character
              magic.

              Release allocated memory before longjmping from libnetpbm.

              Add pm_errormsg(), pm_setusererrormsg(), pm_setusermessage().

              pm_accept_to_pamtuples: fix bug: fill in pam structure.
              Thanks "Christian Schlotter" <schlotter@users.sourceforge.net>.

              Fix selection of MMX_SEE fastpath based on GNU compiler version
              number.

              Eliminate pm_perror() in favor of informative error messages.

              libnetpbm: fix rgb:r/g/b color name parsing for invalid
              syntax.

06.08.19 BJH  Release 10.35.0

              Add pgmdeshadow.

              giftopnm: add -quitearly.

              pamfile: add -comments.

              ppmdraw: remove limitation on size of script.

              pnm_readpaminit(), pnm_writepaminit(): Add comment control.

              ppmtogif: do one row at a time.

              Pnmtopng: improve validation of -modtime option.

              Look in /usr/share/X11 instead of /usr/openwin/lib for
              rgb.txt.

              ppmtompeg: die properly when frame is less than 16x16.

              ppmdraw: fix bug with semicolon in script not followed by
              white space.

              libppmd (ppmdraw, ppmlabel): don't crash with horizontal
              or vertical line that is entirely out of frame.

              picttoppm: Fix 32 bit per pixel conversion, broken in 10.34.

              pamthreshold: fix read from pipe.

              Fix typo in make file that makes svgtopam get built
              when Libxml2 is not available.
