@@ -6,6 +6,18 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.36.0
 
+              pamthreshold: don't gather global information, and reread
+              file, for local thresholding (to save time, resources).
+              Thanks Erik Auerswald <auerswal@unix-ag.uni-kl.de>.
+
+              Remove some generated files from release so build works.
+
+              Properly clean thinkjettopbm.c with 'make distclean'.
+
+              Fix version number control.
+
+              Remove general history from change file
+
               libnetpbm: BK color matching adjustments, change of
               enum bk_color.  Thanks "Kenan Kalajdzic"
               <kalajdzic@gmail.com>.
